k8s/base/tools-suoritin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toimi-tools-suoritin
  namespace: apps
spec:
  selector:
    app: toimi-tools-suoritin
  ports:
    - port: 80
      targetPort: 8080
